Aggiunti suggerimenti in tutti i target dei moduli

--- a/Views/Progetto/Edit.cshtml
+++ b/Views/Progetto/Edit.cshtml
@@ -641,7 +641,7 @@
                                                     @Html.DisplayFor(model => model.ListaModuliConTarget[i].Comando)
                                                 </td>
                                                 <td>
-                                                    @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target, new {placeholder="es: https://www.example.org/", @class="col-md-10"})
+                                                    @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target, new {placeholder="es: example.org", @class="col-md-10"})
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
@@ -698,7 +698,7 @@
                                                     @Html.DisplayFor(model => model.ListaModuliConTarget[i].Comando)
                                                 </td>
                                                 <td>
-                                                    @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
+                                                    @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target, new {placeholder="es: example.org", @class="col-md-10"})
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
@@ -757,7 +757,7 @@
                                                     @Html.DisplayFor(model => model.ListaModuliConTarget[i].Comando)
                                                 </td>
                                                 <td>
-                                                    @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
+                                                    @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target, new {placeholder="es: example.org", @class="col-md-10"})
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
@@ -826,7 +826,7 @@
                                                     @Html.DisplayFor(model => model.ListaModuliConTarget[i].Comando)
                                                 </td>
                                                 <td>
-                                                    @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
+                                                    @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target, new {placeholder="es: example.org", @class="col-md-10"})
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
@@ -883,7 +883,7 @@
                                                     @Html.DisplayFor(model => model.ListaModuliConTarget[i].Comando)
                                                 </td>
                                                 <td>
-                                                    @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
+                                                    @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target, new {placeholder="es: info@example.org", @class="col-md-10"})
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
@@ -941,7 +941,7 @@
                                                     @Html.DisplayFor(model => model.ListaModuliConTarget[i].Comando)
                                                 </td>
                                                 <td>
-                                                    @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
+                                                    @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target, new {placeholder="es: example.org", @class="col-md-10"})
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
@@ -1008,7 +1008,7 @@
                                                     @Html.DisplayFor(model => model.ListaModuliConTarget[i].Comando)
                                                 </td>
                                                 <td>
-                                                    @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
+                                                    @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target, new {placeholder="es: https://www.example.org/vuln.php?id=1", @class="col-md-10"})
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
@@ -1067,7 +1067,7 @@
                                                     @Html.DisplayFor(model => model.ListaModuliConTarget[i].Comando)
                                                 </td>
                                                 <td>
-                                                    @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
+                                                    @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target, new {placeholder="Per i moduli NOSQLMAP non è necessario", @class="col-md-10", disabled="true"})
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
@@ -1126,7 +1126,7 @@
                                                     @Html.DisplayFor(model => model.ListaModuliConTarget[i].Comando)
                                                 </td>
                                                 <td>
-                                                    @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
+                                                    @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target, new {placeholder="es: 192.168.1.254", @class="col-md-10"})
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
@@ -1196,7 +1196,7 @@
                                                     @Html.DisplayFor(model => model.ListaModuliConTarget[i].Comando)
                                                 </td>
                                                 <td>
-                                                    @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target)
+                                                    @Html.TextBoxFor(model => model.ListaModuliConTarget[i].Target, new {placeholder="Per i moduli WIFITE non è necessario", @class="col-md-10", disabled="true"})
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].ModuloID)
                                                     @Html.HiddenFor(model => model.ListaModuliConTarget[i].Applicazione)
                                                 </td>
