--- a/Views/Modulo/Index.cshtml
+++ b/Views/Modulo/Index.cshtml
@@ -197,13 +197,13 @@
                                         <ul class="dropdown" style="list-style-type:none; margin-left:-40px align:center">
                                             <li>
                                                 <a   data-toggle="collapse" href="#Sqlmap">
-                                                    Sqlmap
+                                                    SQLMap
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
                                             </li>
                                             <li>
                                                 <a   data-toggle="collapse" href="#Nosql">
-                                                    Nosql
+                                                    NoSQLMap
                                                     <span class="glyphicon glyphicon-play" style="font-size:65%"></span>
                                                 </a>
                                             </li>
@@ -1068,7 +1068,7 @@
                     <div class="panel-heading">
                         <a   data-toggle="collapse"  href="#Sqlmap">
                             <strong>
-                                 SQL
+                                 SQLMap
                             </strong>
                             <span class="caret"></span>
                         </a>
@@ -1118,7 +1118,7 @@
                     <div class="panel-heading">
                         <a   data-toggle="collapse"  href="#Nosql">
                             <strong>
-                                 NO SQL
+                                 NoSQLMap
                             </strong>
                             <span class="caret"></span>
                         </a>
