--- a/Views/Report/Index.cshtml
+++ b/Views/Report/Index.cshtml
@@ -34,10 +34,12 @@
                             </td>
                             <td>
                                 @if(@item.ListaReport.Count != 0){
-                                            @Html.Raw("<a href=\"/Report/Lista/"+@item.ID+"\" >Lista report</a> <span class=\"glyphicon glyphicon-ok-sign\" style=\"color:green\"></span>")
+                                            @Html.Raw("<a href=\"/Report/Lista/"+@item.ID+"\" >Lista report</a> <span class=\"glyphicon glyphicon-ok-sign\" style=\"color:green\"></span> | ")
+                                            @Html.Raw("<a href=\"/Report/Tutti/"+@item.ID+"\" >Visualizza tutti i report</a> <span class=\"glyphicon glyphicon-folder-open\" style=\"color:green\"></span>")
                                         }
                                         else {
-                                            @Html.Raw("Lista report <span class=\"glyphicon glyphicon-remove-sign\" style=\"color:red\" ></span>")
+                                            @Html.Raw("Lista report <span class=\"glyphicon glyphicon-remove-sign\" style=\"color:red\" ></span> | ")
+                                            @Html.Raw("Visualizza tutti i report <span class=\"glyphicon glyphicon-folder-open\" style=\"color:red\" ></span>")
                                         }
                             </td>
                         </tr>
