--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -79,9 +79,6 @@
                                           <li>
                                               <a href="/Report">visualizza report</a>
                                           </li>
-                                          <li>
-                                              <a href="/importaReport">importa report</a>
-                                          </li>
                                       </ul>
                                   </div>
                               </div>
@@ -123,6 +120,8 @@
                     WebMVA dipende da alcuni pacchetti che devono essere installati, ovvero:
                     <ul>
                         <li>nmap</li>
+                        <li>Apache fop</li>
+                        <li>wkhtmltopdf</li>
                         <li>ruby</li>
                         <li>Python 2 e 3 più pip per entrambi</li>
                         <li>perl</li>
