--- a/Views/Progetto/Edit.cshtml
+++ b/Views/Progetto/Edit.cshtml
@@ -355,7 +355,7 @@
                      <div class="panel-body ">
                                      
                                     <div class="col-sm-12">
-                                     <h4>Seleziona i moduli OPENDOOR</h4><hr/>
+                                     <h4>Seleziona i moduli WASCAN</h4><hr/>
                                     </div>
                             <table class="table">
                                 <div class="method">
@@ -1221,7 +1221,7 @@
             </div>
         <div class="col-sm-6 col-sm-offset-6 text-right"><br>
                                         <div class="form-group">
-                                            <input type="submit" class="btn btn-default" value="Salva" style="position:fixed;width:60px;height:60px;bottom:40px;right:50px;" />&nbsp;&nbsp;
+                                            <input type="submit" class="btn btn-info" value="Salva" style="position:fixed;width:100px;height:40px;bottom:40px;right:50px;" />&nbsp;&nbsp;
                                             <a asp-action="Index"> Torna alla lista</a>
                                         </div>
                                     </div>
