--- a/Views/Report/Tutti.cshtml
+++ b/Views/Report/Tutti.cshtml
@@ -10,16 +10,17 @@ if (importati != null) idImportati = importati.ID;
 <div class="container">
     <h2><em>Tutti i report del progetto: @Model.ElementAt(0).Progetto.Nome</em></h2>
     
-    <div class="panel panel-default col-lg-10 col-lg-offset-1">
+    <div class="panel panel-default">
         <div class="col-lg-12 text-right">
     <form asp-action="Importa" enctype="multipart/form-data">
         <input type="file" id="file" name="file" value="Sfoglia..." accept=".pdf,application/pdf" style="display:inline-block; margin-top:2%"/>
         <input type="submit" asp-action="Importa" asp-route-idProgetto="@Model.ElementAt(0).ProgettoID" asp-route-reportID="@idImportati" value="Importa" style="display:inline-block"/>
     </form>
     </div>
+    <div class="col-lg-8 col-lg-offset-1">
             <table class="table">
                 <div class="method">
-                   <thead>
+                    <thead>
                         <tr>
                             <th> <div style="font-size=4pt;"><h6><strong>PDF unico</strong> </h6></div><input type="checkbox" name="selezionaTutto" onclick="SelezTT()"/></th>
                           
@@ -31,7 +32,7 @@ if (importati != null) idImportati = importati.ID;
                             <th class="text-center">Scarica pdf</th>
                             <th class="text-center"></th>
                         </tr>
-                    </thead>
+                        </thead>
                 </div>
                 <tbody>
                     
@@ -61,18 +62,19 @@ if (importati != null) idImportati = importati.ID;
                                 <input type="checkbox" value="Report/@itm.Percorsi.ElementAt(i).Percorso" name="pdf" />
                             </td>  
                             <td class="text-center">
-                                <a >Cancella </a>
+                                <a asp-action="DeletePercorso"  asp-route-id="@itm.Percorsi.ElementAt(i).ID" class="btn btn-danger">Cancella</a>
                             </td>
                             </tr>
                 }
             }
-                <input type="submit" asp-action="DownloadUnico" asp-route-cosa="unico" asp-route-nomeProgetto="@Model.ElementAt(0).Progetto.Nome" class="btn btn-info" value="Scarica tutto in PDF" style="position:fixed;width:150px;height:40px;bottom:40px;left:25px;" />&nbsp;&nbsp; 
+                <input type="submit" asp-action="DownloadUnico" asp-route-daDove="Tutti/@Model.ElementAt(0).ProgettoID" asp-route-cosa="unico" asp-route-nomeProgetto="@Model.ElementAt(0).Progetto.Nome" class="btn btn-info" value="Scarica tutto in PDF" style="position:fixed;width:150px;height:40px;bottom:40px;left:25px;" />&nbsp;&nbsp; 
                     
-                <input type="submit" asp-action="DownloadUnico" asp-route-cosa="zip" asp-route-nomeProgetto="@Model.ElementAt(0).Progetto.Nome" class="btn btn-info" value="Scarica ZIP" style="position:fixed;width:100px;height:40px;bottom:40px;right:45px;" />&nbsp;&nbsp; 
+                <input type="submit" asp-action="DownloadUnico" asp-route-daDove="Tutti/@Model.ElementAt(0).ProgettoID" asp-route-cosa="zip" asp-route-nomeProgetto="@Model.ElementAt(0).Progetto.Nome" class="btn btn-info" value="Scarica ZIP" style="position:fixed;width:100px;height:40px;bottom:40px;right:25px;" />&nbsp;&nbsp; 
                         </form>
             
             </tbody>
         </table>
+        </div>
     </div>
 </div>
 @section scripts{
