Correzioni varie bis

--- a/Views/Modulo/Create.cshtml
+++ b/Views/Modulo/Create.cshtml
@@ -561,7 +561,7 @@
                                         <div class="col-sm-4  text-right ">
                                                 <form asp-action="Test">
                                             <div class="form-group">
-                                                <input type="submit" asp-action="Test" class="btn btn-default" value="Test" asp-route-cosa="nessus" />
+                                                <input type="submit" asp-action="Test" class="btn btn-default" value="Test" asp-route-cosa="nessus" asp-route-daDove="Create" />
                                                 </div>
                                                 </form>
                                                
@@ -669,7 +669,7 @@
                                         <div class="col-sm-4 text-right ">
                                                 <form asp-action="Test">
                                             <div class="form-group">
-                                                <input type="submit" asp-action="Test" class="btn btn-default" value="Test" asp-route-cosa="openvas" />
+                                                <input type="submit" asp-action="Test" class="btn btn-default" value="Test" asp-route-cosa="openvas" asp-route-daDove="Create" />
                                                 </div>
                                                 </form>
                                                
