--- a/Views/Report/Lista.cshtml
+++ b/Views/Report/Lista.cshtml
@@ -4,7 +4,7 @@
 
 <div class="container">
     <h2><em>Lista Report</em></h2>
-    <h3><em>Progetto:</em><strong> @Model.ElementAt(0).Progetto.Nome</strong></h3>
+    <h3><em>Progetto:</em><strong> <a href="/Progetto/Details/@Model.ElementAt(0).ProgettoID">@Model.ElementAt(0).Progetto.Nome</a></strong></h3>
 
     <div class="panel panel-default col-md-7" style="margin:0 auto; float:none;">
             <table class="table">
