--- a/Views/Report/DeletePercorso.cshtml
+++ b/Views/Report/DeletePercorso.cshtml
@@ -1,5 +1,6 @@
 @model webmva.Models.PercorsiReport 
 @{ ViewData["Title"] = "Elimina Singolo File"; 
+string daDove = ViewBag.daDove;
 }
 <br>
   <div class="container">
@@ -31,7 +32,7 @@
                  <div class="col-xs-6 col-sm-offset-6 text-right">
                      <br>
                     <div class="form-group">
-                        <input type="submit" asp-action="DeletePercorso" asp-route-id="@Model.ID" class="btn btn-info" value="Elimina File" />&nbsp; |
+                        <input type="submit" asp-action="DeletePercorso" asp-route-daDove="@daDove" asp-route-id="@Model.ID" class="btn btn-info" value="Elimina File" />&nbsp; |
                         <a asp-action="Index">  Torna alla lista</a>
                     </div>
                 </div>
